			ROX-Session
			Session manager for the ROX desktop
			by Thomas Leonard


23-Dec-2004
~~~~~~~~~~~
Added Chinese translation (Babyfai Cheung).

23-Oct-2004
~~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

15-Oct-2004
~~~~~~~~~~~
Allow Xcursor code to compile under GLib 2.2 (Stephen Watson).

06-Sep-2004 (Release 0.1.25)
~~~~~~~~~~~
Use new ROX-Lib system for getting root access (Thomas Leonard).

30-Aug-2004
~~~~~~~~~~~
Added support for changing Xcursor theme and size (Guido Schimmels; code from
GNOME).

25-Aug-2004
~~~~~~~~~~~
Give a more helpful message if the backup xsession file already exists
(requested by Nils-Erik Svangård).

14-Aug-2004 (Release 0.1.24)
~~~~~~~~~~~
Added support for D-BUS 0.22; 0.20 and 0.21 are still supported (Thomas
Leonard).

08-Aug-2004
~~~~~~~~~~~
Added support for switching mouse button order for left-handed use (Guido
Schimmels; code from GNOME).

22-Jul-2004
~~~~~~~~~~~
Compatability fixes: /bin/sh behaviour, DPMS, availability of long options
(Stephen Watson).

01-Jul-2004
~~~~~~~~~~~
Message log sizing/positioning code takes Xinerama into account and window is
now a top-level window instead of a dialogue (Tony Houghton).

Provides options for DPMS and keyboard auto-repeat, which can be set via
exteral applications (Tony Houghton).

Added /etc/X11/dm/Sessions to the list of locations where rox.desktop can be
installed (for Mandrake systems).

11-Jun-2004
~~~~~~~~~~~
Bugfix: Setting the keymap to an empty string produced a crash.

05-Jun-2004 (Release 0.1.23)
~~~~~~~~~~~
Added setting to control keymap (Guido Schimmels).

19-May-2004
~~~~~~~~~~~
Bugfix: AutoStart didn't get ROX-Filer from Zero Install (reported by Stuart
	Langridge).

18-May-2004
~~~~~~~~~~~
Added French translation (Sébastien Person).

09-May-2004
~~~~~~~~~~~
Removed window manager chooser from options box. The new way to set the
window manager is by changing an XSetting via D-BUS. A simpler fallback